--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 
   This page contains pointers to all the primary data we used to conduct our study on energy-aware commits, please refer to them below.
 
-  ## [Analysis Spreadsheet](https://docs.google.com/spreadsheets/d/1_BG3Uph2D-DlISZTh4O-qKipUtbUMJm4wUJzrpz3koU/edit?usp=sharing) ##
-  This spreadsheet is a public Google Spreadsheet document that holds all the results of our analysis. Download it [here](https://docs.google.com/spreadsheets/d/1_BG3Uph2D-DlISZTh4O-qKipUtbUMJm4wUJzrpz3koU/edit?usp=sharing).
+  ## [Analysis Spreadsheet](https://docs.google.com/spreadsheets/d/1QWa4nGL8U4EK1B5oA79eEVl7fFpD36CAoVwct0yMj3E/edit?usp=sharing) ##
+  This spreadsheet is a public Google Spreadsheet document that holds all the results of our analysis. Download it [here](https://docs.google.com/spreadsheets/d/1QWa4nGL8U4EK1B5oA79eEVl7fFpD36CAoVwct0yMj3E/edit?usp=sharing).
 
   It includes the following sheets:
 
   - __Dashboard__: contains aggregated data about overall statistics discussed in the paper.
-  - __Analysis__: contains the bulk of the commits data and it also contains the final theme assigned to each commits.
-  - __OKs-Metadata__: contains metadata for the Git repositories that contain at least one "OK" commit.
-  - __OKs-Metrics__: contains overall metrics over the "OKs-metadata" data.
+  - __Analysis__: contains the bulk of the commits data and it also contains the final theme assigned to each commit.
+  - __ChangesStatistics__: contains data and statistics related to the size of the changes and number of files touched.
+  - __HedgingChangesStatistics__: contains data and statistics related to the size of the changes and number of files touched for the commits containing hedging instances.
+  - __ProjectsStatistics__: contains data and statistics for the projects of the analyzed commits. 
+  - __Trends__: contains consolidated information about the number of commits per stack level for each month in the commits sample time range.
+  - __EnergyAwareSet__: a helper sheet to enable the summaries presented in the __Dashboard__ sheet.
 
 
-  ## [MongoDb Dump](https://drive.google.com/file/d/0B_wz-3gJt0yTUUFZYXRmYy0zLUk/view?usp=sharing) ##
+  ## [MongoDb Dump](https://drive.google.com/file/d/0B_wz-3gJt0yTVUlaSURRZGswd0U/view?usp=sharing) ##
 
-  This dump contais GitHub metadata about users, repositories and commits and is primarily meant to be used for replication purposes since some of GitHub's data may become inaccessible*. Download it [here](https://drive.google.com/file/d/0B_wz-3gJt0yTUUFZYXRmYy0zLUk/view?usp=sharing)
-
-  It was created on 01/31/2015 and last updated on 02/14/2015. It uses the same structure of the Github JSON API.
+  This dump contais GitHub metadata about users, repositories and commits and is primarily meant to be used for replication purposes since some of GitHub's data may become inaccessible*. Download it [here](https://drive.google.com/file/d/0B_wz-3gJt0yTVUlaSURRZGswd0U/view?usp=sharing)
 
   It contains the following collections:
 
@@ -32,7 +33,6 @@
   - __commits__: [Commits metadata](https://developer.github.com/v3/repos/commits/#get-a-single-commit).
   - __committers__: [User metadata for commit committers](https://developer.github.com/v3/users/#get-a-single-user).
   - __authors__: [User metadata for commit authors](https://developer.github.com/v3/users/#get-a-single-user).
-  - __blobs__: [Commits blobs for commit files contents](https://developer.github.com/v3/git/blobs/).
 
 
   *Some of the metadata was already not available when trying to download it from Github. This might be due to several reasons: the project could have been renamed or removed, the project owner may have left Github, or the branch where the commit was placed was removed.
